--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
      <ul class="list-menu">
     <li>
-        <a class= "nav-link link" href="./index.html">Studio</a>
+        <a class= "nav-link link accent" href="./index.html">Studio</a>
     </li>
     <li>
         <a class= "nav-link link" href="./portfolio.html">Portfolio</a>
