--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 </div>
     </header>
 
+    <aside class="is-hidden modal-window" data-modal>
+        <section class="modal-window-body">
+        <button  type="button" data-modal-close>x</button>
+        I am modal
+        </section>
+    </aside>
+
     <main>
         <!-- Section 1 -->
     <section class="main-section section">
@@ -62,7 +69,7 @@
 
         <h1 class="main-header">Effective Solutions for Your Business</h1>
 
-        <button class="order-service-button cursor" type="button">Order Service</button>
+        <button class="order-service-button cursor" type="button" data-modal-open>Order Service</button>
         
     </div>
     </section>
