--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
 </div>
     </header>
 
-    <aside class="is-hidden modal-window" data-modal>
+    <div class="is-hidden modal-window" data-modal>
         <section class="modal-window-body">
-        <button  type="button" data-modal-close>x</button>
-        I am modal
+        <button class="button-close" type="button" data-modal-close>
+            <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+        </button>
         </section>
-    </aside>
+    </div>
 
     <main>
         <!-- Section 1 -->
