--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     </header>
 
     <div class="is-hidden modal-window" data-modal>
-        <section class="modal-window-body">
+        <div class="modal-window-body">
         <button class="button-close" type="button" data-modal-close>
-            <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-close"></use>
+            <svg width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
             </svg>
         </button>
-        </section>
+        </div>
     </div>
 
     <main>
