modal window correct

--- a/index.html
+++ b/index.html
@@ -54,16 +54,6 @@
 </div>
     </header>
 
-    <div class="is-hidden modal-window" data-modal>
-        <div class="modal-window-body">
-        <button class="button-close" type="button" data-modal-close>
-            <svg width="8" height="8">
-                <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-            </svg>
-        </button>
-        </div>
-    </div>
-
     <main>
         <!-- Section 1 -->
     <section class="main-section section">
@@ -436,6 +426,17 @@
         </div>
         </div>
     </footer>
+
+    <div class="is-hidden modal-window" data-modal>
+        <div class="modal-window-body">
+            <button class="button-close" type="button" data-modal-close>
+                <svg class="svg-close" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+
 
     <script src="./js/modal.js"></script>
 </body>
