--- a/portfolio.html
+++ b/portfolio.html
@@ -79,9 +79,9 @@
 
     <li class="list-portfolio-li">
        <a class="link link-portfolio" href="">
-        <div class="portfolio-project-pop-up">
+        <div class="pop-up">
        <img src="./images/portfolio/banking_app.jpg" alt="diferent banking pages" width="360" height="300">
-       <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+       <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
     · Cloud Storage App</p>
         </div>
        <div class="projects">
@@ -94,9 +94,9 @@
 
     <li class="list-portfolio-li">
         <a class="link link-portfolio" href="">
-            <div class="portfolio-project-pop-up">
+        <div class="pop-up">
         <img src="./images/portfolio/cashless_payment.jpg" alt="celphone and terminal" width="360" height="300">
-        <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
         · Cloud Storage App</p>
         </div>
         <div class="projects">
@@ -109,9 +109,9 @@
 
     <li class="list-portfolio-li">
         <a class="link link-portfolio" href="">
-        <div class="portfolio-project-pop-up">
+        <div class="pop-up">
         <img src="./images/portfolio/meditation_app.jpg" alt="meditation app in laptop and celphone" width="360" height="300">
-        <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
         · Cloud Storage App</p>
         </div>
         <div class="projects">
@@ -122,92 +122,87 @@
     </li>
 
     <li class="list-portfolio-li">
-                <a class="link link-portfolio" href="">
-                    <div class="portfolio-project-pop-up">
-                <img src="./images/portfolio/taxi_service.jpg" alt="taxi inside" width="360" height="300">
-                <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>"
-                    </div>
-                <div class="projects">
-                <h2 class="project-name">Taxi Service</h2>
-                <p class="description">Marketing</p>
-                </div>
-
-                </a>
-            </li>
-
-    <li class="list-portfolio-li">
-                <a class="link link-portfolio" href="">
-                    <div class="portfolio-project-pop-up">
-                <img src="./images/portfolio/screen_ilustrations.jpg" alt="graphics on celphones" width="360" height="300">
-                <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                </div>
-               <div class="projects">
-               <h2 class="project-name">Screen Illustrations</h2>
-                <p class="description">Design</p>
-                </div>
-
-                </a>
-            </li>
+        <a class="link link-portfolio" href="">
+        <div class="pop-up">
+        <img src="./images/portfolio/taxi_service.jpg" alt="taxi inside" width="360" height="300">
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>"
+        </div>
+        <div class="projects">
+        <h2 class="project-name">Taxi Service</h2>
+        <p class="description">Marketing</p>
+        </div>
+        </a>
+    </li>
 
     <li class="list-portfolio-li">
-                <a class="link link-portfolio" href="">
-                    <div class="portfolio-project-pop-up">
-                <img src="./images/portfolio/online_courses.jpg" alt="young woman in orange sweater" width="360"
+        <a class="link link-portfolio" href="">
+        <div class="pop-up">
+        <img src="./images/portfolio/screen_ilustrations.jpg" alt="graphics on celphones" width="360" height="300">
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+        <div class="projects">
+        <h2 class="project-name">Screen Illustrations</h2>
+        <p class="description">Design</p>
+        </div>
+        </a>
+    </li>
+
+    <li class="list-portfolio-li">
+        <a class="link link-portfolio" href="">
+        <div class="pop-up">
+        <img src="./images/portfolio/online_courses.jpg" alt="young woman in orange sweater" width="360"
                     height="300">
-                <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-               <div class="projects"> 
-               <h2 class="project-name">Online Courses</h2>
-                <p class="description">Marketing</p>
-                </div>
-
-                </a>
-            </li>
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+        <div class="projects"> 
+        <h2 class="project-name">Online Courses</h2>
+        <p class="description">Marketing</p>
+        </div>
+        </a>
+    </li>
    
     <li class="list-portfolio-li">
-                <a class="link link-portfolio" href="">
-                    <div class="portfolio-project-pop-up">
-                <img src="./images/portfolio/instagram_stories.jpg" alt="diferent celphones with instagram Stories" width="360" height="300">
-                <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+        <a class="link link-portfolio" href="">
+        <div class="pop-up">
+        <img src="./images/portfolio/instagram_stories.jpg" alt="diferent celphones with instagram Stories" width="360" height="300">
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                 · Cloud Storage App</p>
-                </div>
-                <div class="projects">
-                <h2 class="project-name">Instagram Stories Concept</h2>
-                <p class="description">Design</p>
-                </div>
-
-                </a>
-            </li>
+        </div>
+        <div class="projects">
+        <h2 class="project-name">Instagram Stories Concept</h2>
+        <p class="description">Design</p>
+        </div>
+        </a>
+    </li>
 
     <li class="list-portfolio-li">
-                <a class="link link-portfolio" href="">
-                    <div class="portfolio-project-pop-up">
-                <img src="./images/portfolio/organic_food.jpg" alt="a woman with shopping net" width="360" height="300">
-                <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+        <a class="link link-portfolio" href="">
+        <div class="pop-up">
+        <img src="./images/portfolio/organic_food.jpg" alt="a woman with shopping net" width="360" height="300">
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                 · Cloud Storage App</p> 
-                    </div>
-                <div class="projects">
-                <h2 class="project-name">Organic Food</h2>
-                <p class="description">Web Site</p>
-                </div>
+        </div>
+        <div class="projects">
+        <h2 class="project-name">Organic Food</h2>
+        <p class="description">Web Site</p>
+        </div>
 
                 </a>
             </li>
 
     <li class="list-portfolio-li">
-                <a class="link link-portfolio" href="">
-                    <div class="portfolio-project-pop-up">
-                <img src="./images/portfolio/fresh_coffee.jpg" alt="a cup of Coffee with milk" width="360" height="300">
-                <p class="portfolio-project-pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+        <a class="link link-portfolio" href="">
+        <div class="pop-up">
+        <img src="./images/portfolio/fresh_coffee.jpg" alt="a cup of Coffee with milk" width="360" height="300">
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                 · Cloud Storage App</p>
-                    </div>
-                
-                    <div class="projects">
-                    <h2 class="project-name">Fresh Coffee</h2>
-                    <p class="description">Web Site</p>
-                    </div>
-                </a>
-            </li>
+        </div>
+        <div class="projects">
+        <h2 class="project-name">Fresh Coffee</h2>
+        <p class="description">Web Site</p>
+        </div>
+        </a>
+    </li>
 
         </ul>
         </div>
