--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
         <a class="link link-portfolio" href="">
         <div class="pop-up">
         <img src="./images/portfolio/taxi_service.jpg" alt="taxi inside" width="360" height="300">
-        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>"
+        <p class="pop-up-text">- 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
         </div>
         <div class="projects">
         <h2 class="project-name">Taxi Service</h2>
